--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Rechercher un manga</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"
+            rel="stylesheet"
     />
 
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
-  </head>
+</head>
 <body>
-  <div class="wrapper">
+<div class="wrapper">
     <div class="container">
-      <form role="search" method="get" class="search-form form" action="">
-        <label>
-            <span class="screen-reader-text">Recherchez un manga...</span>
-            <input type="search" class="search-field" placeholder="Recherchez un manga..." value="" name="s" title="" />
-        </label>
-        <input type="submit" id="search_manga" onclick="search()" class="search-submit button" value="&#xf002" />
-    </form>
+        <form role="search" method="get" class="search-form form" action="">
+            <label>
+                <span class="screen-reader-text">Rechercher un manga...</span>
+                <input type="search" class="search-field" placeholder="Recherchez un manga..." value="" name="s"
+                       title=""/>
+            </label>
+            <input type="submit" id="search_manga" class="search-submit button" value="&#xf002"/>
+        </form>
+        <div class="results">
+            <div class="card">
+                <div class="card-title">Attack on Titan</div>
+                <div><img src="http://commons.wikimedia.org/wiki/Special:FilePath/Attack%20on%20Titan%20logo.svg" class="card-logo" alt=""></div>
+                <p class="card-genre">adventure anime and manga</p>
+                <p class="card-tomes">20 tomes</p>
+                <p class="card-episodes">120 episodes</p>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
 
 
+<script src="index.js"></script>
 
-    <script src="index.js"></script>
-    
-  </body>
+</body>
 </html>
