fix img overflow

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
             <input type="submit" id="search_manga" class="search-submit button" value="&#xf002"/>
         </form>
         <div class="results">
-            <div class="card">
-                <div class="card-title">Attack on Titan</div>
-                <div><img src="http://commons.wikimedia.org/wiki/Special:FilePath/Attack%20on%20Titan%20logo.svg" class="card-logo" alt=""></div>
-                <p class="card-genre">adventure anime and manga</p>
-                <p class="card-tomes">20 tomes</p>
-                <p class="card-episodes">120 episodes</p>
-            </div>
+<!--            <div class="card">-->
+<!--                <div class="card-title">Attack on Titan</div>-->
+<!--                <div>-->
+<!--                    <img src="http://commons.wikimedia.org/wiki/Special:FilePath/Attack%20on%20Titan%20logo.svg" class="card-logo" alt="">-->
+<!--                </div>-->
+<!--                <p class="card-genre">adventure anime and manga</p>-->
+<!--                <p class="card-tomes">20 tomes</p>-->
+<!--                <p class="card-episodes">120 episodes</p>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
